# oglFusionKinectV2

./: .gitignore  CMakeLists.txt  README.md
cmake/: BasicConfig.cmake  FindAruco.cmake  FindConfig.cmake  FindEigen3.cmake  FindFreenect2.cmake  FindGLFW.cmake  FindGLM.cmake  FindRealsense2.cmake
depends/libfreenect2-nm/: CONTROL  portfile.cmake
depends/libusb/: portfile.cmake
graphics/: ImGuiFileDialog.cpp  glhelper.cpp  glhelper.h  glslprogram.cpp  glslprogram.h  glutils.cpp  glutils.h  imgui_impl_glfw_gl3.cpp  shader.cpp
include/: eigen_utils.h  gDisOptFlow.h  gFusion.h  interface.h  kRender.h  kinect.h  mcubes.h  openCVStuff.h  renderHelpers.h  tables.h
resources/: dodec.yml  infrared.json  infrared.xml  infrared.yml
shaders/: depthToVert.cs  disFlow.cs  filter3D.cs  filterGaps.cs  filterVerts.gs  fragShader.fs  helpers.cs  histoPyramids.cs  integrate.cs  marchingCubes.cs  mip.cs  patchInverseSearch.cs  prefixSum.cs  raycast.cs  reduce.cs  reduceSDF.cs  sobelEdge.cs  track.cs  trackSDF.cs  traverseHistoPyramids.cs  variRefine.cs  vertShader.vs  vertToNorm.cs
src/: eigen_utils.cpp  gDisOptFlow.cpp  gDisOptFlow.cpp~RF18b0e37.TMP  gFusion.cpp  interface.cpp  kRender.cpp  kinect.cpp  kinect.cpp~RF174399c.TMP  mcubes.cpp
